# kaari

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
kaari/: __init__.py  calibrate.py  client.py  kaari_calibration_v1.json
kaari/core/: __init__.py  families.py  scoring.py  thresholds.py
kaari/embeddings/: __init__.py  base.py  ollama.py  openai.py
kaari/tests/: test_core.py
