[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaari"
version = "0.95.0"
description = "Intent Vectoring — Black-box prompt injection detection via semantic deviation measurement"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Tatu Samuli Lertola", email = "tatu.lertola@gmail.com"},
]
keywords = ["ai-safety", "prompt-injection", "llm", "security", "intent-vectoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "requests>=2.28",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = [
    "pytest>=7.0",
    "scikit-learn>=1.3",
]

[project.urls]
Homepage = "https://github.com/SolLucidLabs/kaari"
Documentation = "https://github.com/SolLucidLabs/kaari"
Repository = "https://github.com/SolLucidLabs/kaari"

[tool.setuptools.packages.find]
include = ["kaari*"]
